assets/css/style.css
/* ... */
.nav-menu {
    display: grid;
    transform: translateX(-100%);
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 100;
    opacity: 0;
    transition-property: all;
    transition-duration: 300ms;
    place-content: center;
}
.nav--active .nav-menu {
    background: var(--navy);
    color: #fff;
    opacity: 1;
    transition: all 300ms ease-in-out;
    transform: translateX(0);
}
.nav-menu ul {
    list-style: none;
    padding-left: 0;
}
.nav-menu ul li {
    padding: 1rem 0;
}
.nav-menu li a {
    position: relative;
}
.nav-btn {
    background: var(--navy) url('../images/icons/pillar-button.svg') no-repeat center / 50%;
    border-radius: 100px;
    width: 60px;
    height: 60px;
    border: 1px solid #fff;
    position: absolute;
    right: 5%;
    top: 5%;
    transform-origin: center;
    transition: .3s;
    cursor: pointer;
}
.nav--active .nav-btn {
    background: var(--navy) url('../images/icons/xmark.svg') no-repeat center / 50% !important;
    z-index: 101;
}
.hero {
    background-image: url('../images/hero-image.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height:100vh;
    display: grid;
    place-content: center;
}

/********** 404 - Error Page **********/
.error-404 .hero {
    background-image: url('../images/gobekli-tepe-outside.jpeg') !important;
    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
}
.error-404 .hero .overlay{
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    padding: 2rem 1rem;
    z-index: 10;
    display: inline-grid;
    place-content: center;
    color: #fff;
    background: rgba(0, 0, 0, 0.5);
    -webkit-transition: all .35s ease-in-out;
    transition: all .35s ease-in-out;
}
.error-404 .hero-site-logo {
    position: absolute;
    left: 5%;
    top: 5%;
}
.error-404 .nav-btn {
    z-index:99;
}
.error-404 .main-content {
    color:#fff;
}
.error-404 .hero .button {
    font-family: var(--inknut);
    text-transform: initial;
}

/********** Home - Intro section **********/
.intro figure{
    width: 100%;
}
.intro figure img {
    max-height: 70vh;
    width: 100%;
}

/********** Home - Box Nav ***********/
.box-nav {
    position: relative;
}
.box-nav .grid{
    grid-template-columns: repeat(3, 1fr);
}
.box {
    position: relative;
    color: #fff;
    text-align: center;
    display: inline-grid;
    place-content: center;
}
.box:before {
    content: "";
    position: absolute;
    border: 3px solid var(--tan);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 85%;
    height: 85%;
    margin: auto;
    z-index: 2;
    -webkit-transition: all .15s ease-in-out;
    transition: all .15s ease-in-out;
}
.box a {
    -webkit-box-shadow: 2px 2px 2px -1px rgb(153 153 153 / 20%);
    box-shadow: 2px 2px 2px -1px rgb(153 153 153 / 20%);
}
.box-title {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    padding: 2rem 1rem;
    z-index: 10;
    display: inline-grid;
    place-content: center;
    color: #fff;
}
.box-title h2 {
    padding-bottom:0;
}
.box:hover::before {
    opacity: 0;
    z-index: 1;
}
.box:hover a::after {
    content: "";
    position: absolute;
    background-color: var(--tan);
    bottom: 0;
    left: 8px;
    right: 8px;
    height: 12px;
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
    z-index: 0;
    bottom: -10px;
}
.box:hover .box-title {
    background: rgba(0, 0, 0, 0.7);
    -webkit-transition: all .35s ease-in-out;
    transition: all .35s ease-in-out;

}

/********** Home - Discovery **********/
.discovery img {
    width: 100%;
}

/********** Home - Architecture **********/
.architecture img {
    max-height: 450px;
}

.discovery h2, .significance h2, .purpose h2 {
    padding-bottom: 1rem;
}

/********** ABOUT **********/
.pillars figure {
    display: block;
}
#Brochures h3 {
    margin-bottom: 2rem;
}
#Brochures .flex {
    gap: 4rem;
}
#Brochures a:hover {
    text-decoration: underline;
    text-decoration-color: var(--navy);
}
.further-info a:hover {
    text-decoration: underline;
    text-decoration-color: #fff;
    color: var(--tan);
}

.faq details[open] summary {
    font-weight: bold;
}
/********** TIMELINE **********/
/***** Timeline inspiration from - Source Code:https://codepen.io/codyhouse/pen/OJgRvj *****/ 
.timeline-title {
    border-bottom: 5px solid var(--tan);
    margin-bottom: 2rem;
}
#timeline {
    position: relative;
    margin: 0px auto;
    padding: 0;
    overflow: hidden;
}
#timeline::before {
    margin-left: -2px;
    content: "";
    position: absolute;
    top: 0;
    left: 50%;
    height: 100%;
    width: 5px;
    background: var(--navy);
}
.timeline-block {
    position: relative;
    margin: 2em 0;
}

/*********** Timeline Icon **********/
.timeline-icon {
    position: absolute;
    top: 35%;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    background-color: #fff;
    display: grid;
    place-content: center;
    z-index: 99;
}
.timeline-block:nth-child(odd) .timeline-icon {
    left:0;
    margin-left: -6%;
}
.timeline-block:nth-child(even) .timeline-icon {
    right:0;
    margin-right: -6%;
}
.timeline-block.navy-box .timeline-icon {
    box-shadow: 0 0 0 4px var(--navy), inset 0 2px 0 rgb(0 0 0 / 8%), 0 3px 0 4px rgb(0 0 0 / 5%);
}
.timeline-block.tan-box .timeline-icon {
    box-shadow: 0 0 0 4px var(--tan), inset 0 2px 0 rgb(0 0 0 / 8%), 0 3px 0 4px rgb(0 0 0 / 5%);
}
.timeline-icon img {
    max-width: 30px !important;
    max-height: 35px;
}

/********** Timeline Content **********/
.timeline-block .timeline-content {
    padding:3rem;
}
.timeline-content h3 {
    text-align:center;
}
.timeline-block.navy-box .timeline-content {
    background-color: var(--navy);
    color: #fff;
}
/* ... */

